--- a/src/Huskui.Avalonia/Controls/DropZone.axaml
+++ b/src/Huskui.Avalonia/Controls/DropZone.axaml
@@ -4,44 +4,56 @@
                     xmlns:fi="using:FluentIcons.Avalonia">
     <Design.PreviewWith>
         <Panel Background="{StaticResource SystemChromeWhiteColor}">
-            <local:DropZone Margin="12">
-                <Panel>
-                    <Rectangle RadiusX="6" RadiusY="6"
-                               StrokeThickness="2"
-                               Stroke="{StaticResource ControlBorderBrush}"
-                               StrokeDashArray="6,2"
-                               StrokeLineCap="Round"
-                               StrokeJoin="Round" />
-                    <StackPanel Margin="16,12">
-                        <StackPanel Orientation="Horizontal" Spacing="4">
-                            <fi:SymbolIcon Symbol="Attach" FontSize="14" IconVariant="Filled" />
-                            <TextBlock FontWeight="{StaticResource ControlStrongFontWeight}" Text="Drag and drop, or" />
-                            <HyperlinkButton Content="Browser files..."
-                                             FontWeight="{StaticResource ControlStrongFontWeight}"
-                                             Foreground="{StaticResource ControlAccentForegroundBrush}" />
-                        </StackPanel>
-                        <TextBlock Text="Up to 12MB" HorizontalAlignment="Center"
-                                   Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
+            <local:DropZone Margin="12" Padding="16,12">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="4">
+                        <fi:SymbolIcon Symbol="Attach" FontSize="14" IconVariant="Filled" />
+                        <TextBlock FontWeight="{StaticResource ControlStrongFontWeight}" Text="Drag and drop, or" />
+                        <HyperlinkButton Content="Browser files..."
+                                         FontWeight="{StaticResource ControlStrongFontWeight}"
+                                         Foreground="{StaticResource ControlAccentForegroundBrush}" />
                     </StackPanel>
-                </Panel>
+                    <TextBlock Text="Up to 12MB" HorizontalAlignment="Center"
+                               Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
+                </StackPanel>
             </local:DropZone>
         </Panel>
     </Design.PreviewWith>
     <ControlTheme x:Key="{x:Type local:DropZone}" TargetType="local:DropZone">
         <Setter Property="Padding" Value="12" />
+        <Setter Property="CornerRadius" Value="{StaticResource MediumCornerRadius}" />
+        <Setter Property="Background" Value="{StaticResource ControlInteractiveBackgroundBrush}" />
+        <Setter Property="BorderBrush" Value="{StaticResource ControlInteractiveBorderBrush}" />
         <Setter Property="Template">
             <ControlTemplate>
-                <Border Background="{TemplateBinding Background}"
-                        BackgroundSizing="{TemplateBinding BackgroundSizing}"
-                        CornerRadius="{TemplateBinding CornerRadius}" BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}">
+                <Panel>
+                    <Rectangle Name="DashLine"
+                               RadiusX="{TemplateBinding CornerRadius, Converter={x:Static local:CornerRadiusConverters.ToDouble}}"
+                               RadiusY="{TemplateBinding CornerRadius, Converter={x:Static local:CornerRadiusConverters.ToDouble}}"
+                               StrokeThickness="2"
+                               Stroke="{TemplateBinding BorderBrush}"
+                               StrokeDashArray="6,2"
+                               StrokeLineCap="Round"
+                               StrokeJoin="Round" Fill="{TemplateBinding Background}"
+                               Opacity="{StaticResource Overlay1Opacity}">
+                        <Rectangle.Transitions>
+                            <Transitions>
+                                <DoubleTransition Property="Opacity"
+                                                  Duration="{StaticResource ControlFasterAnimationDuration}" />
+                            </Transitions>
+                        </Rectangle.Transitions>
+                    </Rectangle>
                     <ContentPresenter Content="{TemplateBinding Content}"
                                       Padding="{TemplateBinding Padding}"
                                       ContentTemplate="{TemplateBinding ContentTemplate}"
                                       HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                       VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
-                </Border>
+                </Panel>
             </ControlTemplate>
         </Setter>
+
+        <Style Selector="^:dragover /template/ Rectangle#DashLine">
+            <Setter Property="Opacity" Value="1" />
+        </Style>
     </ControlTheme>
 </ResourceDictionary>
