fix(IconLabel): 临时用内部+布局的方法解决一下图标高度Measure无限高的问题

--- a/src/Huskui.Avalonia/Controls/IconLabel.axaml
+++ b/src/Huskui.Avalonia/Controls/IconLabel.axaml
@@ -14,7 +14,7 @@
             <ControlTemplate>
                 <Grid ColumnDefinitions="Auto,*" ColumnSpacing="{TemplateBinding Spacing}">
                     <fi:SymbolIcon Grid.Column="0" Symbol="{TemplateBinding Icon}"
-                                   IconVariant="{TemplateBinding Variant}"
+                                   IconVariant="{TemplateBinding Variant}" VerticalAlignment="Center"
                                    FontSize="{TemplateBinding FontSize}" Foreground="{TemplateBinding Foreground}" />
                     <TextBlock Grid.Column="1" Text="{TemplateBinding Text}" FontSize="{TemplateBinding FontSize}"
                                Foreground="{TemplateBinding Foreground}" />
