--- a/src/Huskui.Avalonia/Themes/Controls.axaml
+++ b/src/Huskui.Avalonia/Themes/Controls.axaml
@@ -14,6 +14,7 @@
         <ResourceInclude Source="/Controls/Dialog.axaml" />
         <ResourceInclude Source="/Controls/Divider.axaml" />
         <ResourceInclude Source="/Controls/Sidebar.axaml" />
+        <ResourceInclude Source="/Controls/DropContainer.axaml" />
         <ResourceInclude Source="/Controls/DropDownButton.axaml" />
         <ResourceInclude Source="/Controls/DropZone.axaml" />
         <ResourceInclude Source="/Controls/Expander.axaml" />
