--- a/src/Huskui.Avalonia/Controls/TabStrip.axaml
+++ b/src/Huskui.Avalonia/Controls/TabStrip.axaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:husk="https://github.com/d3ara1n/Huskui.Avalonia">
 
     <Design.PreviewWith>
         <Panel>
@@ -28,18 +29,31 @@
                         </TextBlock>
                     </TabStripItem>
                 </TabStrip>
-                <TabStrip Theme="{StaticResource SegmentedTabStripTheme}">
+                <TabStrip Theme="{StaticResource SegmentedTabStripTheme}" CornerRadius="8">
                     <TabStripItem Content="Monday" />
                     <TabStripItem Content="Tuesday" />
                     <TabStripItem Content="Wednesday" />
                     <TabStripItem Content="Thursday" />
                     <TabStripItem Content="Friday" />
                 </TabStrip>
+                <TabStrip Theme="{StaticResource PivotTabStripTheme}">
+                    <TabStripItem Content="Home" />
+                    <TabStripItem Content="Download" />
+                    <TabStripItem Content="Settings" />
+                    <TabStripItem Content="About" />
+                </TabStrip>
+                <TabStrip Theme="{StaticResource ChipTabStripTheme}">
+                    <TabStripItem Content="Administrator" />
+                    <TabStripItem Content="Organizer" />
+                    <TabStripItem Content="Speaker" />
+                    <TabStripItem Content="Attendee" />
+                </TabStrip>
             </StackPanel>
         </Panel>
     </Design.PreviewWith>
 
     <ControlTheme x:Key="{x:Type TabStrip}" TargetType="TabStrip">
+        <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
         <Setter Property="ItemsPanel">
             <ItemsPanelTemplate>
                 <StackPanel Spacing="3" Orientation="Horizontal" />
@@ -97,11 +111,31 @@
         </Setter>
     </ControlTheme>
 
+    <ControlTheme x:Key="ChipTabStripTheme" TargetType="TabStrip">
+        <Setter Property="CornerRadius" Value="{StaticResource FullCornerRadius}" />
+        <Setter Property="ItemContainerTheme" Value="{StaticResource ChipTabStripItemTheme}" />
+        <Setter Property="ItemsPanel">
+            <ItemsPanelTemplate>
+                <StackPanel Spacing="4" Orientation="Horizontal" />
+            </ItemsPanelTemplate>
+        </Setter>
+        <Setter Property="Template">
+            <ControlTemplate>
+                <Border Padding="{TemplateBinding Padding}" CornerRadius="{TemplateBinding CornerRadius}"
+                        Background="{TemplateBinding Background}"
+                        BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+                    <ItemsPresenter ItemsPanel="{TemplateBinding ItemsPanel}" />
+                </Border>
+            </ControlTemplate>
+        </Setter>
+    </ControlTheme>
+
     <ControlTheme x:Key="{x:Type TabStripItem}" TargetType="TabStripItem">
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Padding" Value="10,8" />
-        <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
         <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="CornerRadius"
+                Value="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=TabStrip}, Path=CornerRadius}" />
         <Setter Property="Background" Value="{StaticResource OverlayInteractiveBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{StaticResource ControlBorderBrush}" />
         <Setter Property="Template">
@@ -173,7 +207,14 @@
     <ControlTheme x:Key="SegmentedTabStripItemTheme" TargetType="TabStripItem">
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Padding" Value="8,6" />
-        <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
+        <Setter Property="CornerRadius">
+            <MultiBinding Converter="{x:Static husk:CornerRadiusConverters.ToInnerRadiusMulti}">
+                <Binding Path="CornerRadius"
+                         RelativeSource="{RelativeSource FindAncestor, AncestorType=TabStrip}" />
+                <Binding Path="Padding"
+                         RelativeSource="{RelativeSource FindAncestor, AncestorType=TabStrip}" />
+            </MultiBinding>
+        </Setter>
         <Setter Property="Background" Value="{StaticResource OverlaySolidBackgroundBrush}" />
         <Setter Property="ClipToBounds" Value="False" />
         <Setter Property="Template">
@@ -295,5 +336,53 @@
             <Setter Property="RenderTransform" Value="scaleX(1.0)" />
         </Style>
 
+    </ControlTheme>
+
+    <ControlTheme x:Key="ChipTabStripItemTheme" TargetType="TabStripItem">
+        <Setter Property="Padding" Value="12,6" />
+        <Setter Property="FontWeight" Value="{StaticResource ControlStrongFontWeight}" />
+        <Setter Property="Background" Value="{StaticResource ControlTranslucentFullBackgroundBrush}" />
+        <Setter Property="Foreground" Value="{StaticResource ControlAccentForegroundBrush}" />
+        <Setter Property="CornerRadius"
+                Value="{Binding CornerRadius, RelativeSource={RelativeSource FindAncestor, AncestorType=TabStrip}}" />
+        <Setter Property="Template">
+            <ControlTemplate>
+                <Border Name="Background" CornerRadius="{TemplateBinding CornerRadius}"
+                        Background="{TemplateBinding Background}"
+                        Padding="2">
+                    <Border.Transitions>
+                        <Transitions>
+                            <BrushTransition Property="Background" Easing="SineEaseOut"
+                                             Duration="{StaticResource ControlFasterAnimationDuration}" />
+                        </Transitions>
+                    </Border.Transitions>
+                    <Border Padding="{TemplateBinding Padding}"
+                            BorderBrush="{StaticResource ControlReversedForegroundBrush}"
+                            BorderThickness="1">
+                        <Border.CornerRadius>
+                            <MultiBinding Converter="{x:Static husk:CornerRadiusConverters.ToInnerRadiusMulti}">
+                                <Binding Path="CornerRadius"
+                                         RelativeSource="{RelativeSource FindAncestor, AncestorType=Border}" />
+                                <Binding Path="Padding"
+                                         RelativeSource="{RelativeSource FindAncestor, AncestorType=Border}" />
+                            </MultiBinding>
+                        </Border.CornerRadius>
+                        <ContentPresenter Name="ContentPresenter" Content="{TemplateBinding Content}" />
+                    </Border>
+                </Border>
+            </ControlTemplate>
+        </Setter>
+
+        <Style Selector="^:selected /template/ Border#Background">
+            <Setter Property="Background" Value="{TemplateBinding Foreground}" />
+        </Style>
+
+        <Style Selector="^:selected /template/ ContentPresenter#ContentPresenter">
+            <Setter Property="Foreground" Value="{StaticResource ControlReversedForegroundBrush}" />
+        </Style>
+
+        <Style Selector="^:disabled /template/ Border#Background">
+            <Setter Property="Opacity" Value="{StaticResource ControlDimOpacity}" />
+        </Style>
     </ControlTheme>
 </ResourceDictionary>
