--- a/src/Huskui.Avalonia/Controls/ButtonGroup.axaml
+++ b/src/Huskui.Avalonia/Controls/ButtonGroup.axaml
@@ -20,6 +20,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource ControlBorderBrush}" />
         <Setter Property="ItemContainerTheme" Value="{StaticResource ButtonGroupItemTheme}" />
         <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
+        <Setter Property="Padding" Value="1" />
         <Setter Property="ItemsPanel">
             <ItemsPanelTemplate>
                 <StackPanel Orientation="Horizontal" />
@@ -27,11 +28,11 @@
         </Setter>
         <Setter Property="Template">
             <ControlTemplate>
-                <Border
-                    Background="{TemplateBinding Background}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-                    CornerRadius="{TemplateBinding CornerRadius}">
+                <Border Padding="{TemplateBinding Padding}"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="{TemplateBinding CornerRadius}">
                     <ItemsPresenter Name="PART_ItemsPresenter" ItemsPanel="{TemplateBinding ItemsPanel}" />
                 </Border>
             </ControlTemplate>
@@ -48,7 +49,14 @@
         <Setter Property="BorderBrush" Value="{StaticResource ControlBorderBrush}" />
         <Setter Property="FontSize" Value="{StaticResource MediumFontSize}" />
         <Setter Property="Background" Value="{StaticResource TransparentBrush}" />
-        <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
+        <Setter Property="CornerRadius">
+            <MultiBinding Converter="{x:Static local:CornerRadiusConverters.ToInnerRadiusMulti}">
+                <Binding Path="CornerRadius"
+                         RelativeSource="{RelativeSource FindAncestor, AncestorType=local:ButtonGroup}" />
+                <Binding Path="Padding"
+                         RelativeSource="{RelativeSource FindAncestor, AncestorType=local:ButtonGroup}" />
+            </MultiBinding>
+        </Setter>
         <Setter Property="Template">
             <ControlTemplate>
                 <Panel Name="Container">
