feat: add System color

--- a/src/Huskui.Gallery/App.axaml
+++ b/src/Huskui.Gallery/App.axaml
@@ -14,7 +14,7 @@
     </Application.Resources>
 
     <Application.Styles>
-        <husk:HuskuiTheme Accent="Blue" Corner="Normal" />
+        <husk:HuskuiTheme Corner="Normal" />
         <StyleInclude Source="avares://Huskui.Gallery/Styles/Gallery.axaml" />
     </Application.Styles>
 </Application>
