style(CheckBox): make it bouncy

--- a/src/Huskui.Avalonia/Controls/CheckBox.axaml
+++ b/src/Huskui.Avalonia/Controls/CheckBox.axaml
@@ -60,8 +60,8 @@
                                         <CornerRadiusTransition Property="CornerRadius" Easing="CubicEaseOut"
                                                                 Duration="{StaticResource ControlFasterAnimationDuration}" />
                                         <TransformOperationsTransition Property="RenderTransform"
-                                                                       Easing="CubicEaseOut"
-                                                                       Duration="{StaticResource ControlInstantAnimationDuration}" />
+                                                                       Easing="BackEaseOut"
+                                                                       Duration="{StaticResource ControlFastestAnimationDuration}" />
                                     </Transitions>
                                 </Border.Transitions>
                             </Border>
