--- a/src/Huskui.Avalonia/Controls/Sidebar.axaml
+++ b/src/Huskui.Avalonia/Controls/Sidebar.axaml
@@ -1,14 +1,17 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia">
-    <Thickness x:Key="DrawerContentMargin">18</Thickness>
-    <BoxShadows x:Key="DrawerBoxShadow">0 0 4 0 #3F000000</BoxShadows>
+    <Thickness x:Key="SidebarContentMargin">18</Thickness>
+    <Thickness x:Key="SidebarToplessContentMargin">18,0,18,18</Thickness>
+    <Thickness x:Key="SidebarBottomlessContentMargin">18,18,18,0</Thickness>
+    <Thickness x:Key="SidebarToplessBottomlessContentMargin">18,0,18,0</Thickness>
+    <BoxShadows x:Key="SidebarBoxShadow">0 0 4 0 #3F000000</BoxShadows>
 
     <ControlTheme x:Key="{x:Type local:Sidebar}" TargetType="local:Sidebar">
         <Setter Property="MinWidth" Value="256" />
         <Setter Property="Background" Value="{StaticResource FlyoutBackgroundBrush}" />
         <Setter Property="CornerRadius" Value="{StaticResource MediumCornerRadius}" />
-        <Setter Property="Padding" Value="{StaticResource DrawerContentMargin}" />
+        <Setter Property="Padding" Value="{StaticResource SidebarContentMargin}" />
         <Setter Property="Margin" Value="6" />
         <Setter Property="FontWeight" Value="{StaticResource ControlFontWeight}" />
         <Setter Property="Template">
@@ -17,7 +20,7 @@
                         BackgroundSizing="{TemplateBinding BackgroundSizing}"
                         CornerRadius="{TemplateBinding CornerRadius}" BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}" Margin="4"
-                        BoxShadow="{StaticResource DrawerBoxShadow}">
+                        BoxShadow="{StaticResource SidebarBoxShadow}">
                     <ContentPresenter Name="PART_ContentPresenter"
                                       Padding="{TemplateBinding Padding}" Foreground="{TemplateBinding Foreground}"
                                       Content="{TemplateBinding Content}"
